v1.2: Added better variable word alignment detection by adding two new declarations: int[size] and byte[size] for variable length arrays. Fixed while true loops breaking conditional name fixing optimization. Added IntResult for immediate value parsing utilities